Fix spacing of titles and subtitles

--- a/src/components/subtitle.scss
+++ b/src/components/subtitle.scss
@@ -5,10 +5,14 @@
   height: 4rem;
   line-height: 4rem;
   margin: 0;
-  padding: 3.2rem 0 2.8rem 0;
+  padding: 3.2rem 0 1.8rem 0;
   text-transform: uppercase;
 
   &.-blue {
     color: map-get($colors, klarna-blue);
   }
+}
+
+.cui__title--primary + .cui__subtitle {
+    margin-top: -2rem;
 }
