--- a/src/components/title.scss
+++ b/src/components/title.scss
@@ -29,6 +29,6 @@
 .cui__title--secondary {
     @include typography(3rem, semi-bold);
 
-    padding: 3.4rem 0 3.6rem 0;
+    padding: 4.4rem 0 2.6rem 0;
     line-height: 3rem;
 }
